--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Created by https://www.toptal.com/developers/gitignore/api/elixir,phoenix
+# Edit at https://www.toptal.com/developers/gitignore?templates=elixir,phoenix
+
+### Elixir ###
 /_build
 /cover
 /deps
@@ -8,5 +12,33 @@ erl_crash.dump
 *.beam
 /config/*.secret.exs
 .elixir_ls/
-rocketpay-*.tar
+
+### Elixir Patch ###
+
+### Phoenix ###
+# gitignore template for Phoenix projects
+# website: http://www.phoenixframework.org/
+#
+# Recommended template: Elixir.gitignore
+
+# Temporary files
+/tmp
+
+# Static artifacts
+/node_modules
+/assets/node_modules
+
+# Since we are building assets from web/static,
+# we ignore priv/static. You may want to comment
+# this depending on your deployment strategy.
 /priv/static/
+
+# Installer-related files
+/installer/_build
+/installer/tmp
+/installer/doc
+/installer/deps
+
+# End of https://www.toptal.com/developers/gitignore/api/elixir,phoenix
+
+rocketpay-*.tar
